@@ -1,5 +1,8 @@
 1999-06-25  Federico Mena Quintero  <federico@nuclecu.unam.mx>
 
+	* gnome-icon-item.c: Updated all documentation comments.  The icon
+	text item is fully documented now.
+
 	* gnome-icon-list.c: Updated the documentation comments.  The icon
 	list is fully documented now.
 
